# chatak

./: Cargo.toml  Makefile  README.md
src/: commands.rs  input.rs  main.rs  state.rs
src/fs/: mod.rs
src/ui/: help.rs  mod.rs  status.rs  theme.rs
src/ui/panes/: bookmarks.rs  mod.rs  preview.rs  tree.rs
